--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.jayshreegopalapps.imagetopdf"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 5
-        versionName "5.0"
+        versionCode 6
+        versionName "6.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,6 +29,9 @@ dependencies {
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.3.0'
     implementation 'com.google.android.gms:play-services-ads:19.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.android.gms:play-services-vision:20.1.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+
 //    implementation 'com.itextpdf:itext7-core:7.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
@@ -40,4 +43,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(path: ':scanlibrary')
+    implementation files('libs\\fontbox-2.0.20.jar')
+    implementation files('libs\\pdfbox-2.0.20.jar')
+    implementation files('libs\\pdfbox-tools-2.0.20.jar')
+    implementation files('libs\\preflight-2.0.20.jar')
+    implementation files('libs\\xmpbox-2.0.20.jar')
 }
