--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 //    implementation 'com.itextpdf:itextg:5.5.10'
     // implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4@aar'
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.3.0'
+    implementation 'com.github.gcacace:signature-pad:1.2.1'
+
 //    implementation 'com.google.android.gms:play-services-ads:19.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
