--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
+ext {
+    play_services_version = "15.0.1"
+    support_version = "27.1.1"
+}
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -8,9 +11,9 @@ android {
         applicationId "com.jayshreegopalapps.imagetopdf"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 22
+        versionCode 23
 
-        versionName "22.0"
+        versionName "23.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     packagingOptions {
@@ -38,6 +41,17 @@ dependencies {
     // implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4@aar'
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.3.0'
     implementation 'com.github.gcacace:signature-pad:1.2.1'
+    implementation 'com.jcmore2.collage:collage:1.0.0'
+
+// Google Drive
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
+    implementation('com.google.api-client:google-api-client-android:1.26.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
 
 //    implementation 'com.google.android.gms:play-services-ads:19.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
