--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,8 @@ android {
         applicationId "com.jayshreegopalapps.imagetopdf"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 27
-
-        versionName "27.0"
+        versionCode 30
+        versionName "30.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     packagingOptions {
@@ -42,6 +41,7 @@ dependencies {
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.3.0'
     implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.jcmore2.collage:collage:1.0.0'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
 
 // Google Drive
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.github.QuadFlask:colorpicker:0.0.15'
 
 
-//    implementation 'com.google.android.gms:play-services-ads:19.2.0'
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.2'
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
