--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.jayshreegopalapps.imagetopdf"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 30
-        versionName "30.0"
+        versionCode 31
+        versionName "31.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     packagingOptions {
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.github.gcacace:signature-pad:1.2.1'
     implementation 'com.jcmore2.collage:collage:1.0.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.android.billingclient:billing:3.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 // Google Drive
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
