--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QRGenerator"></activity>
+        <activity android:name=".PremiumActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".QRGenerator" />
         <activity android:name=".RotateActivity" />
         <activity android:name=".DeletePageActivity" />
         <activity android:name=".SetPasswordActivity" />
@@ -67,9 +69,7 @@
         <activity android:name=".PDFMergeActivity" />
         <activity android:name=".ViewPDF" />
         <activity android:name=".NavigateAllFolders" />
-        <activity
-            android:name=".BottomNavigationActivity"
-            android:label="@string/title_activity_bottom_navigation" />
+
         <activity android:name=".DatabaseTestActivity" />
         <activity android:name=".InsideFolderActivtiy" />
         <activity android:name=".SplashScreen">
